src/objects/Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age of an Interaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Broker_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency/Broker Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>This field is the Business Unit selected for this case for ETS-BE.</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CSS_SRT__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_SRT__c</fullName>
        <description>This is used to control the business units/originator type available to select for the CSS/SRT/DCSM teams using outlook to create interactions.</description>
        <label>CSS/SRT (HP)/DCSM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSS</fullName>
                </value>
                <value>
                    <fullName>SRT</fullName>
                    <label>SRT (HP)</label>
                </value>
                <value>
                    <fullName>DCSM</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Id_ANI__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Caller Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <description>This field will have the caller type</description>
        <label>Caller Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assistant Controller</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Operating Officer</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>General Agent</fullName>
                </value>
                <value>
                    <fullName>Member Note</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Primary Benefits Administrator</fullName>
                </value>
                <value>
                    <fullName>Primary Billing Administrator</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>UHC Employee</fullName>
                </value>
                <value>
                    <fullName>Unlisted Contact</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Business_Unit__c</fullName>
        <description>The Business Unit of the first case added to the Interaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Authorization_Referral_Number__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Claim/Authorization/Referral  Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This is used to enter comments for the CSS/SRT teams using outlook to create interactions.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Contact Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assistant Controller</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Operating Officer</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>General Agent</fullName>
                </value>
                <value>
                    <fullName>Member Note</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Primary Benefits Administrator</fullName>
                </value>
                <value>
                    <fullName>Primary Billing Administrator</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>UHC Employee</fullName>
                </value>
                <value>
                    <fullName>Unlisted Contact</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Reporting purpose - This is used to capture the Created Date and Time and show in the reports as the Created date standard field is not showing the time in the reports.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <description>Status of an Interaction.</description>
        <label>Current Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Reopen</fullName>
                </value>
                <value>
                    <fullName>BOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Admin_Type__c</fullName>
        <description>Customer admin type, based on the originator selected on the Explore page.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Admin Type</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalated_Date_Time__c</fullName>
        <description>The date/time, when an interaction is escalated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Escalated Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalated_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User specified for an Interaction that is escalated.</description>
        <label>Escalated To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>User.Profile_Name__c</field>
                <operation>notEqual</operation>
                <value>FamilyLink Community User</value>
            </filterItems>
            <filterItems>
                <field>User.Profile_Name__c</field>
                <operation>notEqual</operation>
                <value>Family Link Provider User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box should be checked when an Interaction is escalated.</description>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Reason__c</fullName>
        <description>Reason for an Interaction to be escalated.</description>
        <label>Escalation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AEP (Annual Enrollment Program)</fullName>
                </value>
                <value>
                    <fullName>C&amp;S Implementation</fullName>
                </value>
                <value>
                    <fullName>Claims Impact</fullName>
                </value>
                <value>
                    <fullName>Compliance Risk</fullName>
                </value>
                <value>
                    <fullName>DOI/State Complaints</fullName>
                </value>
                <value>
                    <fullName>Executive Complaint</fullName>
                </value>
                <value>
                    <fullName>Financial Hardship</fullName>
                </value>
                <value>
                    <fullName>Group Request</fullName>
                </value>
                <value>
                    <fullName>Health Plan Request</fullName>
                </value>
                <value>
                    <fullName>Incorrect Termination</fullName>
                </value>
                <value>
                    <fullName>Media Threat</fullName>
                </value>
                <value>
                    <fullName>Member Access</fullName>
                </value>
                <value>
                    <fullName>Over SLA</fullName>
                </value>
                <value>
                    <fullName>Pending Litigation</fullName>
                </value>
                <value>
                    <fullName>Platinum Provider</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>Sanctioned Provider</fullName>
                </value>
                <value>
                    <fullName>UHN Audit Fail</fullName>
                </value>
                <value>
                    <fullName>Escalation Reason - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Age__c</fullName>
        <description>Age of the event based off of Original Received Date and Closed Date</description>
        <inlineHelpText>This field is the age of the event.</inlineHelpText>
        <label>Event Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Received_Date__c</fullName>
        <description>Date that the phone call, email, fax, etc. was received that generated the event.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Received_Time__c</fullName>
        <label>Event Received Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Event Type selected for the BEO case - US2580332</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evt_Recvd_Dt_Time__c</fullName>
        <description>Event Received Date/Time, captured from the Explore page.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Received Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <description>Date of follow up for an Interaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Franchise_Code__c</fullName>
        <description>Franchise code associated to the General Agent</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Franchise Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Agency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>General Agency</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Encrypted_Originator_Contact_Name__c</fullName>
        <formula>Contact_Name__c + &apos;|||||&apos; +  Originator_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Get Encrypted Originator/Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <description>This field stores Group ID when originator is Producer/Group, and subject is Member.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highlight_Panel_GroupInfo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Highlight Panel GroupInfo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>History_Log__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>History Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Creator_User_Type__c</fullName>
        <description>Field will display the user type of the Salesforce user that created the interaction. Will be used to flag interactions so can be filtered from reports or flagged for removal.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>End User interactions created by a production user. Development User interactions created by an internal ACET user and flagged for removal.</inlineHelpText>
        <label>Interaction Creator User Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <description>Interaction Type, as captured on the Explore page.</description>
        <label>Interaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Claim</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Proactive Initiative</fullName>
                </value>
                <value>
                    <fullName>Walk-In</fullName>
                </value>
                <value>
                    <fullName>Inbound Correspondence</fullName>
                </value>
                <value>
                    <fullName>Research Only</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>SRS Resource Inquiry</fullName>
                </value>
                <value>
                    <fullName>SRS Escalated Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Date_of_Birth__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Member Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Id__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Member ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>NPI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Withdrawn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a backend field used to identify if there is at least one routed/closed case associated to the interaction.</description>
        <label>No Withdrawn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Received_Date__c</fullName>
        <description>Date that the original request was received.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the received date of the original request.</inlineHelpText>
        <label>Original Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Originator_Email__c</fullName>
        <description>Originator Email, from the Explore page.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Originator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Originator_Extension__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Originator Extension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Name__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Originator Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Phone__c</fullName>
        <description>Originator Phone, from the Explore page.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Originator Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Originator_Relationship__c</fullName>
        <description>to indicate the relationship between caller and subject</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Originator Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_SFID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Originator SFID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Type_Outlook__c</fullName>
        <label>Originator Type (Outlook)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent/Broker</fullName>
                </value>
                <value>
                    <fullName>Customer/HR Rep</fullName>
                </value>
                <value>
                    <fullName>General Agent</fullName>
                </value>
                <value>
                    <fullName>Internal UHG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Originator_Type__c</fullName>
        <label>Originator Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Group/Employer</fullName>
                </value>
                <value>
                    <fullName>General Agent</fullName>
                </value>
                <value>
                    <fullName>UHG</fullName>
                </value>
                <value>
                    <fullName>Internal UHG Employee</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Unlisted Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Agency/Broker</fullName>
                </value>
                <value>
                    <fullName>Group Contact</fullName>
                </value>
                <value>
                    <fullName>Other Originator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Originator__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Originator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Admin_Type__c</fullName>
        <label>Other Admin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Other_Admin_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Priority indicator for BEO interactions US2584154</description>
        <label>Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Producer_ID__c</fullName>
        <description>This field stores Producer ID when originator is Producer, and subject is Group or Member.</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Producer ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_Name__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Producer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address_City__c</fullName>
        <description>Used to store Type of Provider address City. Value is being used to call the findMedicalProvider service (fast track)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address_County__c</fullName>
        <description>Used to store Type of Provider address County. Value is being used to call the findMedicalProvider service (fast track)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Address County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address_Id__c</fullName>
        <description>Used to store Type of Provider address ID. Value is being used to call the findMedicalProvider service (fast track)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Address Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address_Postal_Prefix__c</fullName>
        <description>Used to store Type of Provider address Postal Prefix. Value is being used to call the findMedicalProvider service (fast track)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Address Postal Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address_Postal_Suffix__c</fullName>
        <description>Used to store Type of Provider address Postal suffix. Value is being used to call the findMedicalProvider service (fast track)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Address Postal Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address_State__c</fullName>
        <description>Used to store Type of Provider address State. Value is being used to call the findMedicalProvider service (fast track)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Address State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Address Status</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address_Type__c</fullName>
        <description>Used to store Type of Provider address Type Code. Value is being used to call the findMedicalProvider service (fast track)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Address Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <description>Used to store Type of Provider Type Code. Value is being used to call the findMedicalProvider service (fast track)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question Type Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Open_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Re-Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reopen_Date_Time__c</fullName>
        <description>The date/time interaction is reopened</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reopen Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolution_Date__c</fullName>
        <description>date/time when an interaction is either closed or withdrawn.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reward_Account_Number__c</fullName>
        <description>Reward account number associated to the Agency/Broker</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reward Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TFN_Toll_Free_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TFN (Toll Free Number)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Provider Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Party</label>
        <referenceTo>Third_Party__c</referenceTo>
        <relationshipLabel>Interactions (Third Party)</relationshipLabel>
        <relationshipName>Interactions1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tst_Date_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Field</label>
        <type>Date</type>
    </fields>
    <label>Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Originator__c</columns>
        <columns>Interaction_Type__c</columns>
        <columns>Originator_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CSO_Email_BEO_Interaction</fullName>
        <columns>NAME</columns>
        <columns>Originator_Type_Outlook__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Evt_Recvd_Dt_Time__c</columns>
        <filterScope>Queue</filterScope>
        <label>CSO Email BEO</label>
        <queue>CSO_Email_BEO</queue>
        <sharedTo>
            <group>CSO_Email_BEO</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSO_Email_Eligibility_BEO_Interaction</fullName>
        <columns>NAME</columns>
        <columns>Originator_Type__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Created_Date__c</columns>
        <columns>Evt_Recvd_Dt_Time__c</columns>
        <filterScope>Queue</filterScope>
        <label>CSO Email - Eligibility BEO</label>
        <queue>CSO_Email_Eligibility_BEO</queue>
        <sharedTo>
            <group>CSO_Email_Eligibility_BEO</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ECS_Specialty_Benefits_BEO_Interaction</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>ECS Specialty Benefits BEO</label>
        <queue>ECS_Specialty_Benefits_BEO</queue>
        <sharedTo>
            <group>UHCBS_Escalations_BEO</group>
        </sharedTo>
    </listViews>
</CustomObject>